# multicloud-openstack

./: .gitattributes  .gitignore  .gitreview  Dockerfile-fcaps  INFO.yaml  License.txt  docker-compose-fcaps.yml  docker-compose-pike.yml  docker-compose-starlingx.yml  docker-compose-windriver.yml  groups  pom.xml  project.config  reviewers.config  version.properties
common/: assembly.xml  pom.xml
newton/: .dockerignore  .gitignore  Dockerfile  README.md  assembly.xml  build_image.sh  docker-compose.yml  initialize.sh  manage.py  multicloud-variables.env  pom.xml  requirements.txt  run.sh  setup.cfg  setup.py  stop.sh  test-requirements.txt  tox.ini
newton/docker/: Dockerfile  build-image.sh  build_image.sh
newton/newton/: settings.py  urls.py  wsgi.py
newton/newton/extensions/: urls.py
newton/newton/extensions/tests/: test_epacaps.py  test_extensions.py  test_hpacaps.py
newton/newton/extensions/views/: epacaps.py  extensions.py
newton/newton/proxy/: urls.py
newton/newton/proxy/tests/: __init__.py  test_identity_proxy.py  test_service_proxy.py
newton/newton/pub/: exceptions.py
newton/newton/requests/: urls.py  views.py
newton/newton/samples/: __init__.py  tests.py  urls.py
newton/newton/swagger/: multicloud.identity.swagger.json  multivim.flavor.swagger.json  multivim.host.swagger.json  multivim.image.swagger.json  multivim.limit.swagger.json  multivim.network.swagger.json  multivim.server.swagger.json  multivim.subnet.swagger.json  multivim.tenant.swagger.json  multivim.volume.swagger.json  multivim.vport.swagger.json  tests.py  urls.py  views.py
(+574 files in other folders)
