[metadata]
name = openstack-multicloud
summary = Python Application Layer for OpenStack API usage
author = ONAP
license = Apache-2
classifier =
    Environment :: ONAP
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    newton

[entry_points]
wsgi_scripts =
    multicloud-api = newton.wsgi:get_application
